Version 4.2.0     2014-07-26
----------------------------

This is not backwards compatible because functions keywords where renamed

Features:

   * BenchmarkIT
      - Support for selected code parts within a function using: START/END TAGS as Comments
         START-TAG: # ::SPEEDIT::
         END-TAG: # **SPEEDIT**

      - option: check_too_fast for very fast code this can be enabled to raise an Exception if it is faster than a reference code

   * MainCode.speed_it(): added new keywords so that all can be enabled/disabled from this one function


   * ProfileIT
      - new keyword: profileit__repeat: which repeatedly profiles the function and generates one report

Fixes/Improvements:

   * BenchmarkIT
      - added variable name prefix to avoid potential name clashes: reserved prefix: '_speeit_prefix'


2014-07-23    4.1.0
-------------------
   * Release v. 4.1.0

   * NEW ADDED:
      - ProfileIT.py:
         - added argument: max_slashes_profile_info: to adjust max path levels in the profile info

   * UPDATED, IMPROVEMENTS:
      - adjusted some internal used function names

2014-07-21    4.0.0
-------------------
   * Release v. 4.0.0
   `SpeedIT` as of version 4.0 (20140721)` is not backwards compatible

   * UPDATED, IMPROVEMENTS:
      - BenchmarkIT.py:
         - added option to run only once: run_sec=-1
         - added option to return the inner code-block: run_sec=None
         - added argument: to repeat: run the whole setup multiple times: repeat=3
         - added argument: to enable garbage collection during the timing: with_gc=True
         - added argument: rank_by: best, average
      - DisassembleIT.py
         - removed unused arguments
      - main functions: all return now a ready txt string instead of a list of lines
         - to reflect that renamed them:
            - speed_it > speed_it,
            - speedit_func_benchmark_list > speedit_benchmark,
            - speedit_func_disassemble_list > speedit_disassemble,